# src/app/core/models/auth.model.ts
@@ -13,3 +13,13 @@ export interface RegistrationRequest {
 export interface AuthenticationResponse {
     token: string;
 }
+
+export interface ForgotPasswordRequest {
+    email: string;
+}
+
+export interface ResetPasswordRequest {
+    token: string;
+    newPassword: string;
+    confirmPassword: string;
+}
